--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <title>Tic-Tac-Toe</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+</head>
 
+<body>
+  <!-- The below setup must be configured to be responsive to app.js DOM Manipulation -->
+  <div class="grid">
+    <div class="row">
+      <div class="cell">X</div>
+      <div class="cell">O</div>
+      <div class="cell">X</div>
+    </div>
+    <div class="row">
+      <div class="cell">X</div>
+      <div class="cell">X</div>
+      <div class="cell">X</div>
+    </div>
+    <div class="row">
+      <div class="cell">O</div>
+      <div class="cell">O</div>
+      <div class="cell">O</div>
+    </div>
+  </div>
+  <script src="./app.js"></script>
+</body>
+
+</html>
