Click through each cell with 'x'

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -11,19 +11,19 @@
   <!-- The below setup must be configured to be responsive to app.js DOM Manipulation -->
   <div class="grid">
     <div class="row">
-      <div class="cell">X</div>
-      <div class="cell">O</div>
-      <div class="cell">X</div>
+      <div class="cell" id="00" onClick="changeText(this)"></div>
+      <div class="cell" id="10" onClick="changeText(this)"></div>
+      <div class="cell" id="20" onClick="changeText(this)"></div>
     </div>
     <div class="row">
-      <div class="cell">X</div>
-      <div class="cell">X</div>
-      <div class="cell">X</div>
+      <div class="cell" id="01" onClick="changeText(this)"></div>
+      <div class="cell" id="11" onClick="changeText(this)"></div>
+      <div class="cell" id="21" onClick="changeText(this)"></div>
     </div>
     <div class="row">
-      <div class="cell">O</div>
-      <div class="cell">O</div>
-      <div class="cell">O</div>
+      <div class="cell" id="02" onClick="changeText(this)"></div>
+      <div class="cell" id="12" onClick="changeText(this)"></div>
+      <div class="cell" id="22" onClick="changeText(this)"></div>
     </div>
   </div>
   <script src="./app.js"></script>
