--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+</head>
 
+<body>
+  <div id="app"></div>
+  <script src="/public/App.js"></script>
+</body>
+
+</html>
